Revert "Fix dataset page margins on mobile"
This reverts commit c09bf2e25f9ac43c9eeb9e554f2da9f136ee349d.

--- a/modules/ytp-assets-common/src/less/ckan/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan/ckan.less
@@ -611,19 +611,17 @@ ul.no-bullet {
   float: right;
 }
 
-@media (min-width: @screen-sm-max) {
-  [role=main] .primary{
-    float: left;
-    width: 100%;
-    padding-left: 0;
-  }
+[role=main] .primary{
+  float: left;
+  width: 100%;
+  padding-left: 0;
+}
 
 
-  [role=main] .secondary ~ .primary{
-    float: left;
-    width: 75%;
-    padding-left: 0;
-  }
+[role=main] .secondary ~ .primary{
+  float: left;
+  width: 75%;
+  padding-left: 0;
 }
 
 @media (max-width: @screen-xs-max) {
